# $Id$
2009-06-09 Benoit Grégoire <benoitg@coeus.ca>
	* Commit slightly modified patch contributed by Zap Sherbrooke:  Allow using the multiple account feature while keeping a common userbase.  Enabled in server configuration.


2008-10-13 Robin Jones
	* fixed #498 curley brace missing in portal.php

2008-10-02 Robin Jones
	* Support for redirecting to the users original URL instead of portal

2008-09-23 Robin Jones
	* Oops, forgot to include new style sheet into the previous commit.
	* Made Login template easier to edit using CSS and added example to NetworkFusion theme pack, This closes #343 .

2008-08-31 Robin Jones
	* Created ability to have a themes setting file to define commonly asked for features.
	* Created a new "Network Theme Pack" to show off the settings file and improve the user experience.

2008-08-31 Robin Jones
	* Updated some table row elements to support Odd/Even CSS. This also closes #382

2008-08-28 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix #492

2008-08-13 Robin Jones
	* Fixed dependency change for Smarty reported by cristian@lalineapeluda.com

2008-08-07 Benoit Grégoire  <bock@step.polymtl.ca>
	* Updated Spanish translation by jlms77@gmail.com

2008-07-13 Benoit Grégoire  <bock@step.polymtl.ca>
	* Add new Catalan translation by Christian Lorenzo cristian@lalineapeluda.com
	* Rebuild transaltions and initial schema.

2008-06-12 Benoit Grégoire  <bock@step.polymtl.ca>
	* Add NODE_PERM_BYPASS_DYNAMIC_ABUSE_CONTROL permission.  User is allowed to exceed dynamic abuse control limits at this node.
	* Stakeholder selector UI tweaks

2008-06-12 Benoit Grégoire  <bock@step.polymtl.ca>
	* Use bigint for dynamic abuse control byte values
	* UIAllowedBandwidth:  Format values in a human-readable way

2008-06-10 Benoit Grégoire  <bock@step.polymtl.ca>
	* Authenticator.php:  Fix SQL error closing connections.
	* auth/index.php:  Probably fix the "Access denied" message when user click twice problem that resurfaced.