@@ -63,6 +63,9 @@
 		    <td>
 		    <a href='{$base_ssl_path}login/index.php?gw_id={$nodes[node].gw_id}&gw_address=127.0.0.1&gw_port=80'>{"Login page"|_}</a><br />
 		    <a href='{$base_url_path}portal/?node_id={$nodes[node].node_id}'>{"Portal page"|_}</a>
+		    {if $nodes[node].public_stats_file }
+		   <br /><a target="_blank" href='{$base_public_stats_url}{$nodes[node].node_id}/{$nodes[node].public_stats_file}'>{"Statistics"|_}</a>
+		    {/if}
 		    </td>
 		    <td style="font-size: 8pt;">{$nodes[node].creation_date}<br>
 		    {$nodes[node].node_deployment_status}
