@@ -1,7 +1,9 @@
 # $Id$
+2009-06-23 Benoit Grégoire <benoitg@coeus.ca>
+	* Commit another slightly modified patch contributed by Zap Sherbrooke:  Allow generating publicly accessible statistics for the various nodes.  Enabled node per node.  Note that a cron must be setup for those stats to actually be generated.
+
 2009-06-09 Benoit Grégoire <benoitg@coeus.ca>
 	* Commit slightly modified patch contributed by Zap Sherbrooke:  Allow using the multiple account feature while keeping a common userbase.  Enabled in server configuration.
-
 
 2008-10-13 Robin Jones
 	* fixed #498 curley brace missing in portal.php
